--- a/scss/import/_character-sheet.scss
+++ b/scss/import/_character-sheet.scss
@@ -235,12 +235,12 @@
       flex-grow: 1;
     }
     .item-body,
-    .item-class-label {
+    .item-playbook-label {
       width: 100px;
     }
   }
 
-  .item-class-label {
+  .item-playbook-label {
     margin-bottom: 10px;
   }
 
