--- a/templates/items/crew_upgrade-sheet.hbs
+++ b/templates/items/crew_upgrade-sheet.hbs
@@ -11,7 +11,7 @@
     <label class="label-stripe">{{localize "BITD.Description"}}</label>
     {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
     <label class="label-stripe">{{localize "BITD.CrewType"}}</label>
-    <input type="text" name="data.class" value="{{data.class}}">
+    <input type="text" name="data.playbook" value="{{data.playbook}}">
     <label class="label-stripe">{{localize "BITD.Price"}}</label>
     <input  data-dtype="Number"  type="text" name="data.price" value="{{data.price}}">
     {{#if isGM}}
