--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -3,7 +3,7 @@
 	<img class="char-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
 	<img class="char-img-bg full-width" src="{{actor.img}}" />
 
-	{{#if items.class}}
+	{{#if items.playbook}}
 	<div class="labelled-item labelled-horizontal playbook-experience">
 		<div class="labelled-item-container">
 				{{> "systems/eunos-blades/templates/parts/dotline.hbs"
@@ -23,15 +23,15 @@
 		<input class="char-name top-title shadowed" type="text" name="name" value="{{actor.name}}">
 		<input class="char-full-name top-subtitle shadowed" type="text" name="data.full_name" value="{{data.full_name}}" placeholder="Full Name">
 
-		<div class="char-class labelled-item labelled-vertical">
-		{{#if items.class}}
-			<div class="labelled-item-container" data-item-id="{{items.class._id}}">
-				<img src="{{items.classBgImg}}" />
-				<div class="item-name shadowed">{{items.class.name}}</div>
+		<div class="char-playbook labelled-item labelled-vertical">
+		{{#if playbook}}
+			<div class="labelled-item-container" data-item-id="{{playbook.id}}">
+				<img src="{{playbook.bgImg}}" />
+				<div class="item-name item-title shadowed">{{playbook.name}}</div>
 			</div>
 		{{else}}
 			<label class="labelled-item-prompt shadowed">
-				<a class="item-add-popup" data-distinct="true" data-item-type="class">Select Your<br />Playbook</a>
+				<a class="item-add-popup" data-distinct="true" data-item-type="playbook">Select Your<br />Playbook</a>
 			</label>
 		{{/if}}
 		</div>
@@ -42,7 +42,7 @@
 				<a class="item-add-popup" data-distinct="true" data-item-type="heritage">{{localize "BITD.Heritage"}}</a>
 			</label>
 			<div class="labelled-item-container" data-item-id="{{items.heritage._id}}">
-				<div class="item-name shadowed">{{items.heritage.name}}</div>
+				<div class="item-name item-title shadowed">{{items.heritage.name}}</div>
 			</div>
 			{{else}}
 			<label class="labelled-item-prompt shadowed">
@@ -58,7 +58,7 @@
 			</label>
 			<div class="labelled-item-container" data-item-id="{{items.background._id}}">
 				<img src="{{items.background.img}}" title="{{items.background.name}}" />
-				<div class="item-name shadowed">{{items.background.name}}</div>
+				<div class="item-name item-title shadowed">{{items.background.name}}</div>
 			</div>
 			{{else}}
 			<label class="labelled-item-prompt shadowed">
@@ -74,7 +74,7 @@
 			</label>
 			<div class="labelled-item-container" data-item-id="{{items.vice._id}}">
 				<img src="{{items.vice.img}}" title="{{items.vice.name}}" />
-				<div class="item-name long-name shadowed">{{items.vice.name}}</div>
+				<div class="item-name item-title long-name shadowed">{{items.vice.name}}</div>
 			</div>
 			{{else}}
 			<label class="labelled-item-prompt shadowed">
@@ -135,7 +135,7 @@
 	{{!-- Stress and Trauma --}}
 	<section class="stress-trauma flex-horizontal full-width">
 		<div class="stress-teeth flex-horizontal">
-			<label class="dotline-label zero-button" data-target="data.stress.value">{{data.stress.name}}</label>
+			<label class="dotline-label filled-label">{{data.stress.name}}</label>
 			{{> "systems/eunos-blades/templates/parts/dotline.hbs"
 				data=data.stress
 				target="data.stress.value"
@@ -147,9 +147,9 @@
 		</div>
 
 		<div class="trauma-teeth flex-vertical">
-			<label class="dotline-label">{{data.trauma.name}}</label>
+			<label class="dotline-label filled-label">{{traumaData.name}}</label>
 			{{> "systems/eunos-blades/templates/parts/dotline.hbs"
-				data=data.trauma
+				data=traumaData
 				target="data.trauma.value"
 				svgKey="teeth.short"
 				svgFull="full|frame"
@@ -161,12 +161,12 @@
 
 		<div class="trauma-conditions flex-vertical">
 			<div class="flex-horizontal">
-			{{#each data.trauma.list as |status displayName|}}
+			{{#each traumaData.displayed as |status displayName|}}
 				<label class="text-checkbox">
-					<input type="checkbox" data-dtype="Boolean" name="data.trauma.list.{{displayName}}" value="{{status}}" {{checked status}}/>
+					<input type="checkbox" data-dtype="Boolean" name="data.trauma.checked.{{displayName}}" value="{{status}}" {{checked status}}/>
 					<span>{{displayName}}</span>
 				</label>
-				{{#if (test @index "==" (calc (calc (calc "floor" (count ../data.trauma.list)) "/" 2) "-" 1))}}
+				{{#if (test @index "==" (calc (calc (calc "floor" (count ../traumaData.displayed)) "/" 2) "-" 1))}}
 				</div><div class="flex-horizontal">
 				{{/if}}
 			{{/each}}
@@ -178,9 +178,15 @@
 	<section class="harm-armor full-width">
 			<table class="shadowed">
 				<thead>
-					<th colspan="4">{{localize "BITD.Harm"}}</th>
-					<th>{{localize "BITD.Healing"}}</th>
-					<th>{{localize "BITD.Armor"}}</th>
+					<th colspan="4">
+						<label class="dotline-label filled-label">{{localize "BITD.Harm"}}</label>
+					</th>
+					<th>
+						<center><label class="dotline-label filled-label">{{localize "BITD.Healing"}}</label></center>
+					</th>
+					<th>
+						<center><label class="dotline-label filled-label">{{localize "BITD.Armor"}}</label></center>
+					</th>
 				</thead>
 				<tbody>
 					<tr>
@@ -242,53 +248,78 @@
 				{{!-- Abilities Tab --}}
 				<div class="tab abilities flex-vertical" data-tab="abilities">
 					<label class="tab-label">
+						<a class="item-add-popup" data-item-type="ability">
+							<i class="fas fa-plus-square"></i>
+						</a>
 						<span class="tab-title">{{localize "BITD.Abilities"}}</span>
 					</label>
 
-					{{#each actor.items as |item id|}}
-						{{#if (eq item.type "ability")}}
-							<div class="item flex-horizontal" data-item-id="{{item._id}}">
-								<div class="item-body flex-horizontal">
-									<div class="item-name">{{item.name}}</div>
-									<div class="item-description">{{{item.system.description}}}</div>
-								</div>
-								<a class="item-control item-delete" title="{{localize 'BITD.TitleDeleteItem'}}">
-									<i class="fas fa-trash"></i>
-								</a>
+					{{#each items.abilities}}
+						<div class="labelled-item labelled-horizontal item" data-item-id="{{_id}}">
+							<label class="item-name">
+								<span class="item-title">{{case "title" name}}</span>
+								<img class="item-img" src="{{img}}" />
+							</label>
+							<div class="labelled-item-container">
+								<div class="item-description shadowed">{{{system.description}}}</div>
 							</div>
-						{{/if}}
+							<a class="item-control item-delete" title="{{localize 'BITD.TitleDeleteItem'}}">
+								<i class="fas fa-trash"></i>
+							</a>
+						</div>
 					{{/each}}
 				</div>
 
 				{{!-- Loadout Tab --}}
 				<div class="tab loadout flex-vertical" data-tab="loadout">
 					<label class="tab-label">
-						<span class="tab-title">{{localize "BITD.Loadout"}}</span>
+						{{#unless (test loadData.curLoad ">=" loadData.selLoadCount)}}
 						<a class="item-add-popup" data-item-type="item">
 							<i class="fas fa-plus-square"></i>
 						</a>
-						<span class="load-amount">{{loadData.curLoad}}</span>
-						<span class="load-level">{{localize loadData.curLoadLevel}}</span>
-						<select name="data.loadout.selected">
-							{{selectOptions loadData.selections selected=loadData.selLoadLevel localize=true}}
+						{{/unless}}
+						<span class="tab-title">{{localize "BITD.Loadout"}}</span>
+						<select class="load-selector" data-dtype="string" name="data.loadout.selected">
+							{{#select loadData.selLoadLevel}}
+							<option value="" hidden disabled selected></option>
+							{{#each loadData.selections}}
+							<option value="{{this}}">{{localize this}}</option>
+							{{/each}}
+							{{/select}}
 						</select>
+
+						<span class="load-selected-count">{{#if loadData.selLoadCount}}(Max <span class="shadowed">{{loadData.selLoadCount}}</span> Load){{/if}}</span>
+
+						<span class="load-level">Current Load:</span>
+						<span class="load-amount number-circle">{{loadData.curLoad}}</span>
 					</label>
-					<div>
-						{{#each actor.items as |item id|}}
-						{{#if (eq item.type "item")}}
-						<div class="item flex-horizontal" data-item-id="{{item._id}}">
-							<div class="item-body flex-horizontal">
-								<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-								<div class="item-name">{{removeClassPrefix item.name}}</div>
-								<div class="item-description">{{{item.data.description}}}</div>
+
+					{{#each items.loadout}}
+						<div class="labelled-item labelled-horizontal item" data-item-id="{{_id}}">
+							{{#if (test system.uses.max ">" 0)}}
+							{{> "systems/eunos-blades/templates/parts/dotline.hbs"
+								data=system.uses
+								target="item.system.uses.value"
+								iconEmpty="dot-empty.svg"
+								iconEmptyHover="dot-empty-hover.svg"
+								iconFull="dot-full.svg"
+								iconFullHover="dot-full-hover.svg"
+							}}
+							{{/if}}
+							<label class="item-name">
+								<span class="item-title">{{case "title" name}}</span>
+								<img class="item-img" src="{{img}}" />
+							</label>
+							<div class="labelled-item-container">
+								<div class="item-description shadowed">{{{system.description}}}</div>
 							</div>
 							<a class="item-control item-delete" title="{{localize 'BITD.TitleDeleteItem'}}">
 								<i class="fas fa-trash"></i>
 							</a>
+							<div class="item-load number-circle">{{system.load}}</div>
 						</div>
-						{{/if}}
-						{{/each}}
-					</div>
+					{{/each}}
+
 				</div>
 
 				{{!-- Description & Notes Tab --}}
@@ -332,7 +363,7 @@
 						<div class="item flex-horizontal" data-item-id="{{item._id}}">
 							<div class="item-body item-sheet-open flex-horizontal">
 								<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-								<div class="item-name">{{item.name}}</div>
+								<div class="item-name item-title">{{item.name}}</div>
 							</div>
 							<a class="item-control item-delete" title="{{localize 'BITD.TitleDeleteItem'}}">
 								<i class="fas fa-trash"></i>
@@ -348,6 +379,12 @@
 
 				{{#each data.attributes as |attribute_data attribute_name|}}
 				<div class="labelled-item labelled-horizontal labelled-attribute">
+					<div class="attribute-total-clock clock-container">
+							{{> "systems/eunos-blades/templates/components/clock.hbs"
+								data=(lookup ../attributes attribute_name)
+							}}
+						</td>
+					</div>
 					<label>{{case "title" attribute_name}}</label>
 					<div class="labelled-item-container">
 						{{> "systems/eunos-blades/templates/parts/dotline.hbs"
