--- a/templates/faction-sheet.hbs
+++ b/templates/faction-sheet.hbs
@@ -14,7 +14,7 @@
 			<div id="faction-{{faction._id}}-items" class="faction-items label-stripe-gray item flex-horizontal" data-item-id="{{faction._id}}">
               <a class="item-body flex-horizontal">
                 <img src="{{faction.img}}" title="{{faction.name}}" width="24" height="24"/>
-				<div class="item-name">{{faction.name}}<br>{{localize "BITD.Tier"}}: {{faction.data.tier}}</div>
+				<div class="item-name item-title">{{faction.name}}<br>{{localize "BITD.Tier"}}: {{faction.data.tier}}</div>
 			  </a>
 			  <a class="item-control item-delete" title="{{localize 'BITD.TitleDeleteItem'}}"><i class="fas fa-trash"></i></a>
 
@@ -67,7 +67,7 @@
 		  </div>
           {{/if}}
           {{/each}}
-          <div class="item-class-label"><a class="item-add-popup" data-item-type="faction">{{localize "BITD.AddItem"}}</a></div>
+          <div class="item-playbook-label"><a class="item-add-popup" data-item-type="faction">{{localize "BITD.AddItem"}}</a></div>
         </div>
 	  </div>
 	</div>
