--- a/templates/items/crew_ability-sheet.hbs
+++ b/templates/items/crew_ability-sheet.hbs
@@ -10,11 +10,12 @@
     <section class="sheet-body flex">
       {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
     </section>
+
     <div class="flex-vertical">
       <label class="label-stripe">{{localize "BITD.AbilityPrice"}}</label>
       <input data-dtype="Number" id="ability-price" type="text" name="data.price" value="{{data.price}}" placeholder="{{localize 'BITD.AbilityPrice'}}">
       <label class="label-stripe">{{localize "BITD.AbilityClass"}}</label>
-      <input id="ability-class" type="text" name="data.class" value="{{data.class}}" placeholder="{{localize 'BITD.AbilityClass'}}">
+      <input data-dtype="String" id="ability-playbook" type="text" name="data.playbook" value="{{data.playbook}}" placeholder="{{localize 'BITD.AbilityClass'}}">
       {{#if isGM}}
         <div class="label-stripe">{{localize "BITD.Effects"}}</div>
         <div id="effects">{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}</div>
