--- a/templates/items/gm_tracker-sheet.hbs
+++ b/templates/items/gm_tracker-sheet.hbs
@@ -4,8 +4,8 @@
 	<label for="character-{{actor._id}}-name">Name</label>
 	<input type="text" id="character-{{actor._id}}-short-description" name="data.description_short" value="{{data.description_short}} ">
 	<label for="character-{{actor._id}}-short-description">Short description</label>
-	<input type="text" id="character-{{actor._id}}-associated-class" name="data.associated_class" value="{{data.associated_class}} ">
-	<label for="character-{{actor._id}}-associated-class">Associated Class</label>
+	<input type="text" id="character-{{actor._id}}-associated-playbook" name="data.associated_playbook" value="{{data.associated_playbook}} ">
+	<label for="character-{{actor._id}}-associated-playbook">Associated Class</label>
 	<input type="text" id="character-{{actor._id}}-description" name="data.description" value="{{data.description}} ">
 	<label for="character-{{actor._id}}-description">Description</label>
 	<input type="text" id="character-{{actor._id}}-associated-crew-type" name="data.associated_crew_type" value="{{data.associated_crew_type}} ">
