--- a/templates/parts/dotline.hbs
+++ b/templates/parts/dotline.hbs
@@ -1,9 +1,9 @@
 
-<div class="dotline {{~#if blockClass}} {{blockClass}}{{/if}} {{~#if isLocked}} locked{{/if}}" data-target="{{target}}" data-value="{{data.value}}">
+<div class="dotline {{~#if blockClass}} {{blockClass}}{{/if}} {{~#if isLocked}} locked{{/if}}" {{~#unless isLocked}}data-target="{{target}}"{{/unless}} data-value="{{data.value}}">
 
 	{{!-- Filled Dots --}}
-	{{#forloop 1 data.value}}
-	<span class="dot full-dot {{~#if (test this "==" data.value)}} value-dot{{/if}} {{~#if ../svgKey}} svg-dot{{/if}}" data-value="{{this}}" data-dtype="Number">
+	{{#forloop 1 (calc (test value "??" data.value) "min" (test (test max "??" data.max) "??" (test value "??" data.value)))}}
+	<span class="dot full-dot {{~#if (test this "==" (test value "??" data.value))}} value-dot{{/if}} {{~#if ../svgKey}} svg-dot{{/if}}" data-value="{{this}}" data-dtype="Number">
 		{{#if (test ../altIconStep "&&" (test (calc this "%" ../altIconStep) "==" 0))}}
 			{{#if ../altIconFullHover}}
 				<img class="img-hover" src="systems/eunos-blades/assets/icons/dotlines/{{../altIconFullHover}}" />
@@ -35,7 +35,8 @@
 	{{/forloop}}
 
 	{{!-- Empty Dots --}}
-	{{#forloop (calc data.value "+" 1) data.max}}
+	{{#if (test max "??" data.max)}}
+	{{#forloop (calc (test value "??" data.value) "+" 1) (test max "??" data.max)}}
 	<span class="dot empty-dot {{~#if ../svgKey}} svg-dot{{/if}}" data-value="{{this}}" data-dtype="Number">
 		{{#if ../iconEmptyHover}}
 			<img class="img-hover" src="systems/eunos-blades/assets/icons/dotlines/{{../iconEmptyHover}}" />
@@ -51,5 +52,6 @@
 		{{/if}}
 	</span>
 	{{/forloop}}
+	{{/if}}
 
 </div>
